@@ -1051,7 +1051,6 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.sendExplain)
         d.addCallback(self.login, 0)
         d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
-
         d.addCallback(self.seatTable, 0, 101)
         d.addCallback(self.buyInTable, 0, 101, 1000)
         d.addCallback(self.autoBlindAnte, 0, 101)
@@ -1091,6 +1090,32 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.badBuyIn, 0, 100, 1)
         return d
     # ------------------------------------------------------------------------
+    def noAutoBlindAnte(self, (client, packet), id, gameId ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerNoautoBlindAnte(serial= client.getSerial(),
+                                                        game_id = gameId))
+        found = False
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_POKER_NOAUTO_BLIND_ANTE:
+                self.assertEquals(packet.serial, client.getSerial())
+                self.assertEquals(packet.game_id, gameId)
+                found = True
+        self.assertEquals(found, True)
+        return (client, packet)
+    # -------------------------------------------------------------------------
+    def test20_turningOffAutoBlind(self):
+        """Test to cover a player turning off their autoBlindAnte Setting"""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.sendExplain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.noAutoBlindAnte, 0, 101)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1106,7 +1131,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test19"
+#    loader.methodPrefix = "test20"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
